fixtures/go/fallback/should_fail/error_return_default.go
package api

type UserPayload struct{}

func ParseUser(err error) UserPayload {
	if err != nil { return UserPayload{} }
	return UserPayload{}
}
